--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">AIRecommender</string>
+    <string name="app_name">AI Recommender</string>
+    <string name="logo_placeholder">logo</string>
+    <string name="app_description">Suggests outfits based on style preferences, trends, weather, and occasion for personalized styling</string>
 </resources>
