--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,12 @@
     <string name="delete">Delete</string>
     <string name="confirm_description">Do you want to remove the user? (this action is not reversible)</string>
     <string name="confirm">Confirm</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Floating">floating_btn</string>
+    <string name="user_profile_str">Profile Image</string>
+    <string name="favourite">Favourite</string>
+    <string name="delete_account">Delete Account</string>
 </resources>
