--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="user_profile_str">Profile Image</string>
     <string name="favourite">Favourite</string>
     <string name="delete_account">Delete Account</string>
+    <string name="logout">Logout</string>
 </resources>
