--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,25 @@
     <string name="favourite">Favourite</string>
     <string name="delete_account">Delete Account</string>
     <string name="logout">Logout</string>
+    <string name="recommend">Recommend</string>
+    <string name="Preference">Preference</string>
+    <string name="Items">Items</string>
+    <string name="cloth_form">Clothing Type</string>
+    <string name="occasion_type">Occasion Type\n</string>
+    <string name="occasion">Occasion</string>
+    <string name="fabric">Fabric</string>
+    <string name="colors">Colors</string>
+    <string name="Style">Style</string>
+    <string name="style_reference">Style Preference</string>
+    <string name="size">Size</string>
+    <string name="weight">Weight</string>
+    <string name="height">Height</string>
+    <string name="fitType">Fit Type</string>
+    <string name="body_type">Body Type</string>
+    <string name="body_measur">Body Measurements</string>
+    <string name="budget">Budget</string>
+    <string name="gender">Gender</string>
+    <string name="age">Age\n</string>
+    <string name="recomander">Recommender</string>
+    <string name="back">Back</string>
 </resources>
