--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="age">Age\n</string>
     <string name="recomander">Recommender</string>
     <string name="back">Back</string>
+    <string name="recommended_cloths">Recommended Cloths</string>
 </resources>
