Naveed : Updating Main Screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="back">Back</string>
     <string name="recommended_cloths">Recommended Cloths</string>
     <string name="cloth_recommender">Cloth Recommender</string>
-    <string name="get_inspired">Get Inspired</string>
+    <string name="get_inspired">Struggling with Outfit Choices?</string>
     <string name="makeup_recommender">Makeup Recommender</string>
+    <string name="tagline">Your Perfect Outfit Is Just A Tap Away!</string>
 </resources>
