Naveed : Updating strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,5 @@
     <string name="get_inspired">Struggling with Outfit Choices?</string>
     <string name="makeup_recommender">Makeup Recommender</string>
     <string name="tagline">Your Perfect Outfit Is Just A Tap Away!</string>
-    <string name="Note"><b>Note</b> : This outfit suits your age, shape & style.</string>
+    <string name="Note"><b>Note</b> : This outfit suits your age, shape and style.</string>
 </resources>
