--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="edit_profile">Edit Profile</string>
     <string name="reset_password">Reset Password</string>
     <string name="update_profile">Update Profile</string>
+    <string name="no_favourite_images">Nothing here</string>
+    <string name="no_favourite_images_found">No favourite images found.</string>
 </resources>
