Naveed : Updating API Request Timeout Bug.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="age">Age\n</string>
     <string name="recomander">Recommender</string>
     <string name="back">Back</string>
-    <string name="recommended_cloths">Recommended Cloths</string>
+    <string name="recommended_cloths">Recommendations</string>
     <string name="cloth_recommender">Cloth Recommender</string>
     <string name="get_inspired">Struggling with Outfit Choices?</string>
     <string name="makeup_recommender">Makeup Recommender</string>
